--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,13 @@ middle_name: S.
 last_name: Abdelfattah
 email: mohamed@cornell.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Research portal for Mohamed's research group at Cornell Tech.
 footer_text:
+announcement:
 
 url:  # the base hostname & protocol for your site
-baseurl: /al-folio # the subpath of your site, e.g. /blog/
-last_updated: false # set to true if you want to display last updated in the footer
+baseurl: # the subpath of your site, e.g. /blog/
+last_updated: True # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
 # -----------------------------------------------------------------------------
@@ -43,6 +44,7 @@ github_username: mohsaied
 twitter_username: mohsaied
 linkedin_username: mabdelfattah
 scholar_userid: q4wBpWAAAAAJ
+youtube_username: #TODO create youtube channel
 gitlab_username: # your GitLab user name
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
@@ -56,7 +58,7 @@ wikidata_id: # your wikidata id
 
 contact_note: 
 
-google_analytics: UA-XXXXXXXXX # out your google-analytics code
+google_analytics: UA-44212905-2 # out your google-analytics code
 panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
 
 # -----------------------------------------------------------------------------
@@ -72,7 +74,7 @@ pagination:
   enabled: true
 
 # Comments
-disqus_shortname: al-folio # put your disqus shortname
+disqus_shortname: mohsaied # put your disqus shortname
 
 # -----------------------------------------------------------------------------
 # Collections
@@ -139,7 +141,7 @@ github: [metadata]
 scholar:
 
   last_name: Abdelfattah
-  first_name: [Mohamed, S.]
+  first_name: [Mohamed S]
 
   style: apa
   locale: en
@@ -161,7 +163,7 @@ scholar:
 # Optional Features
 # -----------------------------------------------------------------------------
 
-enable_google_analytics:    false  # enables google analytics
+enable_google_analytics:    true  # enables google analytics
 enable_panelbear_analytics: false  # enables panelbear analytics
 enable_mansory:             true   # enables automatic project cards arangement
 enable_math:                true   # enables math typesetting (uses MathJax)
