pubs almost there - confs and journals done, patents, books and theses remain

--- a/_config.yml
+++ b/_config.yml
@@ -141,7 +141,7 @@ github: [metadata]
 scholar:
 
   last_name: Abdelfattah
-  first_name: [Mohamed S]
+  first_name: Mohamed S.
 
   style: apa
   locale: en
