--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ wikidata_id: # your wikidata id
 
 contact_note: 
 
-google_analytics: UA-44212905-2 # out your google-analytics code
+google_analytics: UA-44212905-2 # put your google-analytics code
 panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
 
 # -----------------------------------------------------------------------------
