--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ github_username: mohsaied
 twitter_username: mohsaied
 linkedin_username: mabdelfattah
 scholar_userid: q4wBpWAAAAAJ
-youtube_username: #UC3JUq7HfmDDLhkF9L1mlVOg
+youtube_username: UC3JUq7HfmDDLhkF9L1mlVOg
 gitlab_username: # your GitLab user name
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
