--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
       - master
-      - main
+      - source
   pull_request:
     branches:
       - master
-      - main
+      - source
 
 jobs:
   deploy:
