--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: mohsaied
+github_username: abdelfattah-lab
 twitter_username: mohsaied
 linkedin_username: mabdelfattah
 scholar_userid: q4wBpWAAAAAJ
