--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ github_username: abdelfattah-lab
 twitter_username: mohsaied
 linkedin_username: mabdelfattah
 scholar_userid: q4wBpWAAAAAJ
-youtube_id: UC3JUq7HfmDDLhkF9L1mlVOg
+youtube_id: mabdelfattah88
 gitlab_username: # your GitLab user name
 x_username: mohsaied # your X handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
