--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ footer_text:
 keywords: # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon:  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: favicon.ico # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 announcement:
 
 url: https://www.mohsaied.com/ # the base hostname & protocol for your site
