--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name: S.
 last_name: Abdelfattah
 email: mohamed@cornell.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Research portal for Mohamed's research group at Cornell Tech.
+  Web portal for Mohamed's research group at Cornell University.
 footer_text:
 keywords: # add your own keywords or leave empty
 
